# harness-core

./: BUILD.bazel  WORKSPACE  bazelrc.common
.aeriform/: BUILD.bazel
110-change-data-capture/: config.yml
120-ng-manager/: BUILD.bazel  config.yml
125-cd-nextgen/: BUILD.bazel
260-delegate/: module-dependency.hash
270-delegate-service-app/: module-dependency.hash
280-batch-processing/: BUILD.bazel
310-ci-manager/: BUILD.bazel
340-ce-nextgen/: BUILD.bazel  config.yml
360-cg-manager/: config.yml
800-pipeline-service/: BUILD.bazel
860-orchestration-steps/: BUILD.bazel
877-filestore/: BUILD.bazel
880-pipeline-cd-commons/: BUILD.bazel
941-filestore-client/: BUILD.bazel
951-debezium-service/: config.yml
952-debezium-engine/: BUILD.bazel
959-file-service-commons/: BUILD.bazel
dockerization/batch-processing/: Dockerfile-batch-processing-cie-jdk
dockerization/ce-nextgen/: Dockerfile-ce-nextgen-cie-jdk
dockerization/change-data-capture/: Dockerfile-change-data-capture-cie-jdk
dockerization/ci-manager/: Dockerfile-ci-manager-cie-jdk
dockerization/command-library-server/: Dockerfile-command-library-server-cie-jdk
dockerization/cv-nextgen/: Dockerfile-cv-nextgen-cie-jdk
dockerization/delegate/: Dockerfile-delegate-jenkins-openjdk
dockerization/delegate-service-app/: Dockerfile-delegate-service-app-cie-jdk
dockerization/event-server/: Dockerfile-event-server-cie-jdk
product/ci/split_tests/: BUILD.bazel  README.md  main.go
product/ci/split_tests/junit/: BUILD.bazel
project/: main_maven_install.json
scripts/bazel/: bazel_script.sh
(+608 files in other folders)
