load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "split_tests_lib",
    srcs = ["main.go"],
    importpath = "github.com/harness/harness-core/product/ci/split_tests",
    visibility = ["//:__pkg__"],
    deps = [
        "//commons/go/lib/logs",
        "//commons/go/lib/metrics",
        "//product/ci/common/external",
        "//product/ci/engine/consts",
        "//product/ci/engine/grpc",
	    "//product/ci/split_tests/junit",
        "@com_github_alexflint_go_arg//:go-arg",
        "@org_uber_go_zap//:zap",
	    "@com_github_bmatcuk_doublestar//:doublestar",
    ],
)

go_binary(
    name = "split_tests",
    embed = [":split_tests_lib"],
    visibility = ["//visibility:public"],
)
